# cognition-fde-takehome

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  Dockerfile  README.md  compose.override.yaml  compose.yaml  lefthook.yml  pyproject.toml  sample.env
api/: main.py
app/: config.py  database.py  initialization.py  main.py  observability.py  seeds.py
app/automation/: __init__.py  dashboard.py  models.py  repository.py
app/devin/: __init__.py  blueprints.py  client.py  models.py  playbooks.py  sessions.py
app/github/: __init__.py  client.py  models.py
app/github/webhooks/: __init__.py  models.py  router.py  security.py
app/seeds/: dashboard-label-colors.md  mixed-chart-matrixify.md
app/static/: app.css  dashboard.js
app/templates/: index.html
app/webhooks/: __init__.py
app/webhooks/github/: events.py  models.py  router.py  security.py
app/workflows/: __init__.py  bug_fix.py  bug_investigation.py  dispatcher.py  initial_workflow.py
docker/: entrypoint.sh  nginx.conf
frontend/: README.md  index.html  package.json
frontend/src/: App.css  App.tsx  index.css
migrations/: env.py
migrations/versions/: 20260714_0001_create_trigger_events_and_workflow_runs.py
playbooks/: README.md  bug-fix.devin.md  bug-investigation.devin.md
scripts/: __init__.py  seed_issues.py
scripts/seeds/: mixed-chart-matrixify.md
tests/: __init__.py  conftest.py  test_bug_fix_workflow.py  test_devin_playbooks.py  test_devin_sessions.py  test_github_client.py  test_github_webhooks.py  test_health.py  test_migrations.py  test_seed_issues.py  test_workflow_dispatcher.py
tests/integration/: __init__.py  conftest.py  test_automation_persistence.py  test_devin_playbook_initialization_live.py  test_migrations.py
