[project]
name = "github-devin-automation"
version = "0.1.0"
description = "FastAPI service for webhook-driven, scheduled, and manual GitHub-to-Devin automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11,<4.0",
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=9.1,<10.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
strict = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ty.src]
include = ["app", "tests"]
