[project]
name = "github-devin-automation"
version = "0.1.0"
description = "FastAPI service for webhook-driven, scheduled, and manual GitHub-to-Devin automation."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler==3.11.3",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "opentelemetry-api==1.43.0",
    "opentelemetry-exporter-otlp-proto-http==1.43.0",
    "opentelemetry-instrumentation-fastapi==0.64b0",
    "opentelemetry-instrumentation-httpx==0.64b0",
    "opentelemetry-sdk==1.43.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.21",
    "ty==0.0.59",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
strict = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ty.src]
include = ["app", "scripts", "tests"]
